--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>JR Tech</title>
 </head>
-<body>
-    
+<body class="bg-black bg-gradient">
+    <div id="banner" class="row">
+        <div id="bannerLogoContainer" class="col-md-2 bg-danger">
+            <span style="color: white; font-size: 30px;">JR TECH</span>
+        </div>
+        <div id="bannerItemsContainer" class="col-md-10 row bg-primary">
+                <div class="col-md-3">FŐOLDAL</div>
+                <div class="col-md-3">RÓLUNK</div>
+                <div class="col-md-3">TERMÉKEK</div>
+                <div class="col-md-3">ELÉRHETŐSÉGEINK</div>
+        </div>
+    </div>
+    <div id="Section_whoAreWe">
+        <div class="row" style="background-color: #1f3535; text-align: center; padding: 100px;">
+            <h1 style="color: white;">"Legyen a sikered a zajod."</h1>
+        </div>
+        <div class="row" style="margin-top: 50px; margin-left: 50px;">
+            <div class="col-12" style="text-align: center;">
+                <h2 style="color: white;">Kik vagyunk mi?</h2>
+            </div>
+        </div>
+        <div class="row" style="text-align: center; padding-top: 50px;">
+            <div class="col-6" style="background-color: blue; padding-bottom: 700px;">
+   
+            </div>
+            <div class="col-6" style="background-color: red; padding-bottom: 700px;">AH</div>
+        </div>
+    </div>
 </body>
 </html>
