--- a/index.html
+++ b/index.html
@@ -3,37 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>JR Tech</title>
 </head>
-<body class="bg-black bg-gradient">
-    <div id="banner" class="row">
-        <div id="bannerLogoContainer" class="col-md-2 bg-danger">
-            <span style="color: white; font-size: 30px;">JR TECH</span>
+<body>
+    <div class="navbar">
+        <div class="banner">
+            <h1 class="prevent-select">JR TECH</h1>
         </div>
-        <div id="bannerItemsContainer" class="col-md-10 row bg-primary">
-                <div class="col-md-3">FŐOLDAL</div>
-                <div class="col-md-3">RÓLUNK</div>
-                <div class="col-md-3">TERMÉKEK</div>
-                <div class="col-md-3">ELÉRHETŐSÉGEINK</div>
+        <div class="nav-buttons">
+          <div id="nb-fomenu"><button id="fomenu_gomb" onclick="window.location.href = 'index.html';">Home</button></div>
+          <div id="nb-rolunk"><button id="rolunk_gomb" onclick="window.location.href = 'rolunk.html';">Rólunk</button></div>
+          <div id="nb-shop"><button id="shop_gomb" onclick="window.location.href = 'shop.html';">Shop</button></div>
+          <div id="nb-kapcsolat"><button id="kapcsolat_gomb" onclick="window.location.href = 'kapcsolat.html';">Kapcsolat</button></div>
         </div>
     </div>
-    <div id="Section_whoAreWe">
-        <div class="row" style="background-color: #1f3535; text-align: center; padding: 100px;">
-            <h1 style="color: white;">"Legyen a sikered a zajod."</h1>
+    <div class="h-intro">
+        <div class="motto">
+            <div class="main">Mi a JRTech?</div>
+            <div class="sub">Gépek, Szoftverek, Genyók...</div>
         </div>
-        <div class="row" style="margin-top: 50px; margin-left: 50px;">
-            <div class="col-12" style="text-align: center;">
-                <h2 style="color: white;">Kik vagyunk mi?</h2>
+        <div class="video">
+            <video width="640" height="360" controls>
+                <source src="videoanyagok/tesztivideo.mp4" type="video/mp4">
+              </video>
+        </div>
+    </div>
+    <div class="h-intro-presentations">
+      <div class="intro-pres row" style="margin:auto; padding-bottom: 150px;">
+        <div class="who-are-we_image col-md-6 col-sm-12">
+          <img src="images/placeholder-img.webp" alt="photo">
+        </div>
+        <div class="who-are-we_text col-md-6 col-sm-12">
+          <h5>Kik vagyunk mi?</h5>
+          <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsum totam earum nostrum, commodi saepe reiciendis aperiam. Ipsa illum, doloribus possimus ducimus voluptatibus aliquid qui accusantium quasi sint et voluptas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsum totam earum nostrum, commodi saepe reiciendis aperiam. Ipsa illum, doloribus possimus ducimus voluptatibus aliquid qui accusantium quasi sint et voluptas.</h3>
+        </div>
+      </div>
+
+      <div class="intro-pres row" style="margin:auto;">
+        <div class="who-are-we_text col-md-6 col-sm-12">
+          <h5>Mit csinálunk?</h5>
+          <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsum totam earum nostrum, commodi saepe reiciendis aperiam. Ipsa illum, doloribus possimus ducimus voluptatibus aliquid qui accusantium quasi sint et voluptas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsum totam earum nostrum, commodi saepe reiciendis aperiam. Ipsa illum, doloribus possimus ducimus voluptatibus aliquid qui accusantium quasi sint et voluptas.</h3>
+        </div>
+        <div class="who-are-we_image col-md-6">
+          <img src="images/placeholder-img.webp" alt="photo">
+        </div>
+
+        <div class="rolunk-ref">
+          <h5>Tudj meg többet <span><a href="rolunk.html">Rólunk!</a></span></h5>
+        </div>
+    </div>
+
+    <div class="h-gallery">
+        <div class="kep-container">
+            <div class="row fadeInRight">
+                <div class="kep-box col-md-4">
+                  <img src="images/placeholder-img.webp" alt="gepkep">
+                </div>
+                <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
+                  <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
             </div>
-        </div>
-        <div class="row" style="text-align: center; padding-top: 50px;">
-            <div class="col-6" style="background-color: blue; padding-bottom: 700px;">
-   
+            <div class="row fadeInLeft">
+                <div class="kep-box col-md-4">
+                  <img src="images/placeholder-img.webp" alt="gepkep">
+                </div>
+                <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
+                  <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
             </div>
-            <div class="col-6" style="background-color: red; padding-bottom: 700px;">AH</div>
+            <div class="row fadeInLeft">
+                <div class="kep-box col-md-4">
+                  <img src="images/placeholder-img.webp" alt="gepkep">
+                </div>
+                <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
+                  <div class="kep-box col-md-4">
+                    <img src="images/placeholder-img.webp" alt="gepkep">
+                  </div>
+            </div>
+    </div>
+    <div class="footer">
+        <div class="connections">
+            <div class="c-button" id="youtube-ref"><img src="images/logos/youtube.svg" alt="youtube"></div>
+            <div class="c-button" id="discord-ref"><img src="images/logos/discord.svg" alt="discord"></div>
+            <div class="c-button" id="insta-ref"><img src="images/logos/instagram.svg" alt="instagram"></div>
+            <div class="c-button" id="tiktok-ref"><img src="images/logos/tiktok.svg" alt="tiktok"></div>
         </div>
+        <div class="copyright">Copyright&#169; JRTech&#8482; | Minden jog fenntarva. All rights reserved.</div>
     </div>
 </body>
 </html>
