--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
     <title>JR Tech</title>
 </head>
-<body style="background-color: darkslategrey;">
+<body style="background-color: rgb(18, 18, 20);">
     <div class="navbar">
         <div class="banner">
             <h1 class="prevent-select">JR TECH</h1>
@@ -24,16 +24,19 @@
 
     <div class="kapcsolatok">
         <div class="k-title">
-            <p style="color: white; font-size: 20px;">Üzleti elérhetőségeink <br><span style="font-size: 15px;">Email: lakatosmelegszenyo@gmail.com </span><br><span style="font-size: 15px;">Tel.: +36 30 123 4567</span></p>
+            <p style="color: white; font-size: 50px; font-family: 'airstrike';">Üzleti elérhetöségeink <p>
+                <br>
+            <p style="font-size: 20px; font-family: 'airstrike'; color:white">Email: <a href="mailto:lakatosmelegszenyo@gmail.com">lakatosmelegszenyo@gmail.com</a> </p>
+            <p style="font-size: 20px; font-family: 'airstrike'; color:white">Tel.: <a href="tel:+36301234567">+36 30 123 4567</a></p>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" style="margin-top: 240px;">
         <div class="connections">
-            <div class="c-button" id="youtube-ref"><img src="images/logos/youtube.svg" alt="youtube"></div>
-            <div class="c-button" id="discord-ref"><img src="images/logos/discord.svg" alt="discord"></div>
-            <div class="c-button" id="insta-ref"><img src="images/logos/instagram.svg" alt="instagram"></div>
-            <div class="c-button" id="tiktok-ref"><img src="images/logos/tiktok.svg" alt="tiktok"></div>
+            <div class="c-button" id="youtube-ref"><a href="https://www.youtube.com/channel/UCni93JwjA2JNoWbgcVXFR4Q"><img src="images/logos/youtube.svg" alt="youtube"></a></div>
+            <div class="c-button" id="discord-ref"><a href="https://discord.gg/jUuN2YG5Xx"><img src="images/logos/discord.svg" alt="discord"></a></div>
+            <div class="c-button" id="insta-ref"><a href="https://www.instagram.com/jryt_mng/"><img src="images/logos/instagram.svg" alt="instagram"></a></div>
+            <div class="c-button" id="tiktok-ref"><a href="http://www.tiktok.com"><img src="images/logos/tiktok.svg" alt="tiktok"></a></div>
         </div>
         <div class="copyright">Copyright&#169; JRTech&#8482; | Minden jog fenntarva. All rights reserved.</div>
     </div>
