--- a/rolunk.html
+++ b/rolunk.html
@@ -10,7 +10,7 @@
     <title>JR Tech</title>
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar" style="margin-bottom: 125px;">
         <div class="banner">
             <h1 class="prevent-select">JR TECH</h1>
         </div>
@@ -21,6 +21,8 @@
             <div id="nb-kapcsolat"><button id="kapcsolat_gomb" onclick="window.location.href = 'kapcsolat.html';">Kapcsolat</button></div>
         </div>
     </div>
+
+    <div class="rolunk-title prevent-select"><h1>A Csapat</h1></div>
 
     <div class="rolunk-main">
         <div class="r-jani fadeInLeft">
@@ -60,10 +62,10 @@
 
     <div class="footer">
         <div class="connections">
-            <div class="c-button" id="youtube-ref"><img src="images/logos/youtube.svg" alt="youtube"></div>
-            <div class="c-button" id="discord-ref"><img src="images/logos/discord.svg" alt="discord"></div>
-            <div class="c-button" id="insta-ref"><img src="images/logos/instagram.svg" alt="instagram"></div>
-            <div class="c-button" id="tiktok-ref"><img src="images/logos/tiktok.svg" alt="tiktok"></div>
+            <div class="c-button" id="youtube-ref"><a href="https://www.youtube.com/channel/UCni93JwjA2JNoWbgcVXFR4Q"><img src="images/logos/youtube.svg" alt="youtube"></a></div>
+            <div class="c-button" id="discord-ref"><a href="https://discord.gg/jUuN2YG5Xx"><img src="images/logos/discord.svg" alt="discord"></a></div>
+            <div class="c-button" id="insta-ref"><a href="https://www.instagram.com/jryt_mng/"><img src="images/logos/instagram.svg" alt="instagram"></a></div>
+            <div class="c-button" id="tiktok-ref"><a href="http://www.tiktok.com"><img src="images/logos/tiktok.svg" alt="tiktok"></a></div>
         </div>
         <div class="copyright">Copyright&#169; JRTech&#8482; | Minden jog fenntarva. All rights reserved.</div>
     </div>
