--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
     <title>JR Tech</title>
 </head>
-<body style="background-color: darkslategrey;">
+<body style="background-color: rgb(33, 33, 36);">
     <div class="navbar">
         <div class="banner">
             <h1 class="prevent-select">JR TECH</h1>
@@ -24,7 +24,7 @@
 
     <div class="shop-main">
         <div class="termek-title">
-            <h2 style="color: white;">Termékek</h2>
+            <h2 class="prevent-select" style="color: white; font-family: 'airstrike'; justify-self: center; margin-top: 20px; font-size: 60px;">Termékek</h2>
         </div>
         <div class="termekek row" style="margin:auto">
             <div class="termek-col col-md-12">
@@ -230,10 +230,10 @@
 
     <div class="footer">
         <div class="connections">
-            <div class="c-button" id="youtube-ref"><img src="images/logos/youtube.svg" alt="youtube"></div>
-            <div class="c-button" id="discord-ref"><img src="images/logos/discord.svg" alt="discord"></div>
-            <div class="c-button" id="insta-ref"><img src="images/logos/instagram.svg" alt="instagram"></div>
-            <div class="c-button" id="tiktok-ref"><img src="images/logos/tiktok.svg" alt="tiktok"></div>
+            <div class="c-button" id="youtube-ref"><a href="https://www.youtube.com/channel/UCni93JwjA2JNoWbgcVXFR4Q"><img src="images/logos/youtube.svg" alt="youtube"></a></div>
+            <div class="c-button" id="discord-ref"><a href="https://discord.gg/jUuN2YG5Xx"><img src="images/logos/discord.svg" alt="discord"></a></div>
+            <div class="c-button" id="insta-ref"><a href="https://www.instagram.com/jryt_mng/"><img src="images/logos/instagram.svg" alt="instagram"></a></div>
+            <div class="c-button" id="tiktok-ref"><a href="https://www.tiktok.com"><img src="images/logos/tiktok.svg" alt="tiktok"></a></div>
         </div>
         <div class="copyright">Copyright&#169; JRTech&#8482; | Minden jog fenntarva. All rights reserved.</div>
     </div>
