--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     </div>
     <div class="footer">
         <div class="connections">
-            <div class="c-button" id="youtube-ref"><img src="images/logos/youtube.svg" alt="youtube"></div>
-            <div class="c-button" id="discord-ref"><img src="images/logos/discord.svg" alt="discord"></div>
-            <div class="c-button" id="insta-ref"><img src="images/logos/instagram.svg" alt="instagram"></div>
-            <div class="c-button" id="tiktok-ref"><img src="images/logos/tiktok.svg" alt="tiktok"></div>
+            <div class="c-button" id="youtube-ref"><a href="https://www.youtube.com/channel/UCni93JwjA2JNoWbgcVXFR4Q"><img src="images/logos/youtube.svg" alt="youtube"></a></div>
+            <div class="c-button" id="discord-ref"><a href="https://discord.gg/jUuN2YG5Xx"><img src="images/logos/discord.svg" alt="discord"></a></div>
+            <div class="c-button" id="insta-ref"><a href="https://www.instagram.com/jryt_mng/"><img src="images/logos/instagram.svg" alt="instagram"></a></div>
+            <div class="c-button" id="tiktok-ref"><a href="http://www.tiktok.com"><img src="images/logos/tiktok.svg" alt="tiktok"></a></div>
         </div>
         <div class="copyright">Copyright&#169; JRTech&#8482; | Minden jog fenntarva. All rights reserved.</div>
     </div>
